<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity"
    android:padding="8dp"
    android:background="@color/background">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/st_augustinefootanklevein_logo_final"
        tools:ignore="ContentDescription" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logo">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="2dp"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/text_bold"
                android:hint="@string/first_name"
                app:boxBackgroundMode="none"
                app:hintTextColor="@color/text_bold">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/accent"
                    android:inputType="textPersonName"
                    android:drawableEnd="@drawable/ic_baseline_person_24"
                    android:background="@drawable/icon_button"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lName"
                app:layout_constraintTop_toBottomOf="@id/fName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="2dp"
                android:hint="@string/last_name"
                android:textColorHint="@color/text_bold"
                app:boxBackgroundMode="none"
                app:hintTextColor="@color/text_bold">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/accent"
                    android:inputType="textPersonName"
                    android:drawableEnd="@drawable/ic_baseline_person_24"
                    android:background="@drawable/icon_button"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailAddress"
               android:hint="@string/email_address"
                android:textColorHint="@color/text_bold"
                app:layout_constraintTop_toBottomOf="@id/lName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="2dp"
                app:boxBackgroundMode="none"
                app:hintTextColor="@color/text_bold">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/accent"
                    android:inputType="textPersonName"
                    android:drawableEnd="@drawable/ic_baseline_email_24"
                    android:background="@drawable/icon_button"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                app:layout_constraintTop_toBottomOf="@id/emailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/accent"
                app:boxBackgroundMode="none"
                android:hint="@string/password"
                app:hintTextColor="@color/text_bold"
                android:textColorHint="@color/text_bold"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_button"
                    android:textColor="@color/accent"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPassword"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/accent"
                app:boxBackgroundMode="none"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/text_bold"
                app:hintTextColor="@color/text_bold"
               >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_button"
                    android:inputType="textPassword"
                    android:textColor="@color/accent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/confirmPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                android:padding="4dp"
                android:background="@drawable/rounded_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/tvLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btSignUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:text="@string/already_signed_up_log_in"
                android:textColor="@color/accent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>